fixed some minor css stuff, working on getting post title spacing right now

--- a/themes/tale/assets/scss/tale/_base.scss
+++ b/themes/tale/assets/scss/tale/_base.scss
@@ -1,71 +1,70 @@
 * {
-  line-height: 1.5;
-  margin:      0;
-  padding:     0;
-  @include box-sizing;
-  text-rendering:         optimizeLegibility;
-  font-kerning:           normal;
-  -webkit-font-smoothing: subpixel-antialiased;
+	line-height: 1.5;
+	margin: 0;
+	padding: 0;
+	@include box-sizing;
+	text-rendering: optimizeLegibility;
+	font-kerning: normal;
+	-webkit-font-smoothing: subpixel-antialiased;
 }
 
-
-html { 
-  font-size:   calc(62.5% + 1vw);
-  font-family: $serif-primary;
-  color:       $default-color;
-  overflow-y:  scroll;
+html {
+	font-size: calc(62.5% + 1vw);
+	font-family: $serif-primary;
+	color: $default-color;
+	overflow-y: scroll;
 }
 
 body {
-  margin-left:      auto;
-  margin-right:     auto;
-  width:            calc(100% - 35vw);
-  background-color: $grey-1;
+	margin-left: auto;
+	margin-right: auto;
+	width: calc(100% - 35vw);
+	background-color: $grey-1;
 }
 
-@media (max-width: 1100px) { 
-  html {
-  font-size: calc(62.5% + .5vw);
-  }
-  body {
-    width: calc(100%-40vw);
-  }
+@media (max-width: 1100px) {
+	html {
+		font-size: calc(62.5% + 0.5vw);
+	}
+	body {
+		width: calc(100%-40vw);
+	}
 }
 
-@media (max-width: 900px) { 
-  html {
-  font-size: calc(55% + .5vw);
-  }
-  body {
-    width: 65vw;
-  }
+@media (max-width: 900px) {
+	html {
+		font-size: calc(55% + 0.5vw);
+	}
+	body {
+		width: 65vw;
+	}
 }
 
-@media (max-width: 650px) { 
-  html {
-  font-size: calc(50% + .5vw);
-  }
-  body {
-    width: 70vw;
-  }
+@media (max-width: 650px) {
+	html {
+		font-size: calc(50% + 0.5vw);
+	}
+	body {
+		width: 70vw;
+	}
 }
 
-@media (max-width: 530px) and (min-width: 450px) { 
-  html {
-  font-size: calc(45% + .5vw);
-  }
-  body {
-    width: 75vw;
-  }
+@media (max-width: 530px) and (min-width: 450px) {
+	html {
+		font-size: calc(45% + 0.5vw);
+	}
+	body {
+		width: 75vw;
+	}
 }
 
-@media (max-width: 450px) and (min-width: 319px) { 
-  html {
-  font-size: calc(40% + .5vw);
-  }
-  body {
-    width: 80vw;
-  }
+@media (max-width: 450px) and (min-width: 319px) {
+	html {
+		font-size: calc(40% + 0.5vw);
+	}
+	body {
+		width: 80vw;
+	}
 }
 
 h1,
@@ -74,164 +73,161 @@ h3,
 h4,
 h5,
 h6 {
-  color:       $default-color;
-  font-family: $header;
-  font-weight: 600;
+	color: $default-color;
+	font-family: 600 $header;
 }
 
 a {
-  @include transition(all .2s ease-out);
-  color:           $purple;
-  text-decoration: none;
+	@include transition(all 0.2s ease-out);
+	color: $purple;
+	text-decoration: none;
 
-  &:hover,
-  &:focus {
-    opacity: .6;
-  }
+	&:hover,
+	&:focus {
+		opacity: 0.6;
+	}
 }
 
 blockquote {
-  border-left:   .19rem solid $purple;
-  color:         $default-color;
-  margin-bottom: .8rem;
-  padding:       0 1.25rem 0 1.25rem;
+	border-left: 0.19rem solid $purple;
+	color: $default-color;
+	margin-bottom: 0.8rem;
+	padding: 0 1.25rem 0 1.25rem;
 }
 
 img {
-  display:    block;
-  max-width:  50%;
-  max-height: 50%;
-  margin:     .4rem auto .4rem;
+	display: block;
+	max-width: 50%;
+	max-height: 50%;
+	margin: 0.4rem auto 0.4rem;
 }
 
-img+em {
-  color:      $purple;
-  display:    block;
-  font:       500 .9rem $header;
-  text-align: center;
+img + em {
+	color: $purple;
+	display: block;
+	font: 500 0.9rem $header;
+	text-align: center;
 }
 
 td {
-  vertical-align: top;
+	vertical-align: top;
 }
 
 table {
-  margin-left:  auto;
-  margin-right: auto;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .h-card {
-  margin-bottom: 1.6rem;
+	margin-bottom: 1.6rem;
 
-  .mammoth-hcard {
-  font-family: $serif-primary;
-  font-size:   1.2rem;
+	.mammoth-hcard {
+		font-family: $serif-primary;
+		font-size: 1.2rem;
 
-    > .u-photo {
-    display:        inline-block;
-    left:           0;
-    width:          30px;
-    height:         15px;
-    transform:      none;
-    vertical-align: baseline;
-    padding:        0;
-    margin:         0;
-    }
-  }
+		> .u-photo {
+			display: inline-block;
+			left: 0;
+			width: 30px;
+			height: 15px;
+			transform: none;
+			vertical-align: baseline;
+			padding: 0;
+			margin: 0;
+		}
+	}
 }
 
 /* this is for the tags/topics page */
 
 .topics-terms {
-  margin-bottom: .8rem;
-  > h2 {
-  font:           500 1.6rem $smallcaps;
-  font-variant:   all-small-caps;
-  letter-spacing: .08rem;
-  text-align:     center;
-  margin-top:     -.4rem;
-  }
-  > .topicsul {
-    font:       500 1rem $header;
-    margin-top: -.4rem;
-    text-align: center;
-  }
+	margin-bottom: 0.8rem;
+	> h2 {
+		font: 500 1.6rem $smallcaps;
+		font-variant: all-small-caps;
+		letter-spacing: 0.08rem;
+		text-align: center;
+		margin-top: -0.4rem;
+	}
+	> .topicsul {
+		font: 500 1rem $header;
+		margin-top: -0.4rem;
+		text-align: center;
+	}
 }
-
 
 // CSS for making emoji inline
 img.emoji {
-  display:        inline-block;
-  left:           0;
-  transform:      none;
-  width:          1rem;
-  height:         1rem;
-  vertical-align: text-top;
-  padding:        0;
-  margin:         0;
+	display: inline-block;
+	left: 0;
+	transform: none;
+	width: 1rem;
+	height: 1rem;
+	vertical-align: text-top;
+	padding: 0;
+	margin: 0;
 }
 
 /* rules for the code blocks */
 
 pre,
 code {
-  font:       600 .8rem $monospaced;
-  position:   relative;
-  max-width:  35rem;
-  max-height: 100rem;
-  margin:     .8rem auto .8rem auto;
+	font: 600 0.8rem $monospaced;
+	position: relative;
+	max-width: 35rem;
+	max-height: 100rem;
+	margin: 0.8rem auto 0.8rem auto;
 }
 
 %code-block {
-  overflow-x: auto;
-  /* from _syntax.scss */
-  background:       #272822;
-  color:            #f8f8f2;
-  background-color: #272822;
+	overflow-x: auto;
+	/* from _syntax.scss */
+	background: #272822;
+	color: #f8f8f2;
+	background-color: #272822;
 
-  border-radius: .4rem;
-  line-height:   1.4;
-  padding:       .8rem;
+	border-radius: 0.4rem;
+	line-height: 1.4;
+	padding: 0.8rem;
 }
 
 code {
-  background-color: hsl(206.8, 95%, 7.8%);
-  border-radius:    6px;
-  color:            hsl(276.1, 67.7%, 74.5%);
-  font:             500 .6rem $monospaced;
-  padding:          .1rem .3rem;
-  margin:           0 .1rem 0 .1rem;
+	background-color: hsl(206.8, 95%, 7.8%);
+	border-radius: 6px;
+	color: hsl(276.1, 67.7%, 74.5%);
+	font: 500 0.6rem $monospaced;
+	padding: 0.1rem 0.3rem;
+	margin: 0 0.1rem 0 0.1rem;
 
-  & a {
-    color: $code-color-link;
-  }
+	& a {
+		color: $code-color-link;
+	}
 }
 
 pre {
-  @extend %code-block;
+	@extend %code-block;
 }
-
 
 /* TODO: is this a non-highlighted?
  */
 pre code {
-  background-color: transparent;
-  color:            inherit;
-  font-size:        100%;
-  padding:          0;
-  display:          block;
-  margin:           0 auto;
-  max-width:        100%;
+	background-color: transparent;
+	color: inherit;
+	font-size: 100%;
+	padding: 0;
+	display: block;
+	margin: 0 auto;
+	max-width: 100%;
 }
 
 .highlight {
-  .lineno {
-    color:   $purple;
-    display: inline-block;       // Ensures the null space also isn't selectable
-    padding: 0 .75rem 0 .25rem;
-    // Make sure numbers aren't selectable
-    -webkit-user-select: none;
-    -moz-user-select:    none;
-    user-select:         none;
-  }
+	.lineno {
+		color: $purple;
+		display: inline-block; // Ensures the null space also isn't selectable
+		padding: 0 0.75rem 0 0.25rem;
+		// Make sure numbers aren't selectable
+		-webkit-user-select: none;
+		-moz-user-select: none;
+		user-select: none;
+	}
 }
