--- a/themes/tale/assets/scss/tale/_summary.scss
+++ b/themes/tale/assets/scss/tale/_summary.scss
@@ -2,12 +2,12 @@
 	display: grid;
 	grid-template-columns: 25% 50% 25%;
 	grid-template-rows: auto;
-	margin-top: 0.8rem;
 
 	> .h-feed-meta {
 		@extend a;
 		grid-area: 1 / 2 / 1 / 3;
 		text-align: center;
+		margin-bottom: .8rem;
 
 		> a > .feed-info {
 			font: 100 0.9rem $header;
